--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 						<p>Restez en vie le plus longtemps possible</li>
 					</section>
 					<section>
-						<p>Tuez vos adversaires pour gagner plus de point</li>
+						<p>Tuez vos adversaires pour gagner plus de points</li>
 					</section>
 					<section>
 						<p>Tirez partie des bonus que vous trouverez sur la map</li>
